--- a/app/views/organization/itemSale.html
+++ b/app/views/organization/itemSale.html
@@ -20,7 +20,7 @@
 		  <tr>
 			<td width="50%">
 					<div class="control-group">
-						<label class="control-label"> Request By&nbsp;:</label>
+						<label class="control-label"> From Office&nbsp;:</label>
 						<div class="controls">
 							<select ng-model="formData.agentId"
 							   ng-options="officeData.id as officeData.name for officeData in officeDatas">
@@ -40,6 +40,19 @@
                      </div>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<div class="control-group">
+            			<label class="control-label" for="chargeCode">{{'label.chargecode' | translate }}&nbsp;</label>
+            			<div class="controls">
+              			<select ng-model="formData.chargeCode"  ng-options="chargesData.chargeCode as chargesData.chargeDescription for chargesData in chargesDatas" value="{{chargesData.chargeCode}}">
+              			</select>
+            			</div>
+          			</div>
+				</td>
+			</tr>
+			
 			<tr>
 				<td width="50%">
 					<div class="control-group">
@@ -68,7 +81,7 @@
 					<div class="control-group">
 						<label class="control-label">Item Price&nbsp;:</label>
 						<div class="controls">
-							<input type="text" id="itemPrice"  ng-model="formData.chargeAmount" disabled>
+							<input type="text" id="itemPrice"  ng-model="formData.chargeAmount">
 						</div>
 					</div>
 				</td>
