--- a/app/views/logistics/inventory/inventory.html
+++ b/app/views/logistics/inventory/inventory.html
@@ -221,6 +221,7 @@
                 <th>{{'table.supplier.supplierCode' | translate}}</th>
                 <th>{{'table.supplier.supplierDescription' | translate}}</th>
                 <th>{{'table.supplier.supplierAddress' | translate}}</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -229,6 +230,7 @@
                 <td>{{su.supplierCode}}</td>
                 <td>{{su.supplierDescription}}</td>
                 <td>{{su.supplierAddress}}</td>
+                <td><a ng-click="editSupplier(su.id)" popover="Edit" popover-trigger="mouseenter" class="icon-edit"></a></td>
    			</tr>
      		 </tbody>
           </table>
@@ -349,5 +351,48 @@
      </div>
 
 </script>
+
+	<!--
+ 		This is for Edit Supplier
+ 	-->
+ 	 
+<script type="text/ng-template" id="editsuppliers.html">
+
+	<form class="form-horizontal well" ng-submit="submit()">
+	 <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
+	<fieldset>
+		<legend>{{'label.editsupplier' | translate}}</legend>
+		  <div class="control-group">
+            <label class="control-label" for="supplierCode">{{ 'label.supplier.code' | translate }}&nbsp;<span class="required">*</span></label>
+            <div class="controls">
+              <input type="text" id="supplierCode" ng-model="formData.supplierCode">
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="supplierDescription">{{ 'label.supplier.description' | translate }}&nbsp;<span class="required">*</span></label>
+            <div class="controls">
+              <input type="text" id="supplierDescription" ng-model="formData.supplierDescription">
+            </div>
+          </div>
+          <div class="control-group">
+			<label class="control-label" for="supplierAddress">{{'label.supplier.address' | translate}}&nbsp;<span class="required">*</span></label>
+			<div class="controls">
+				<textarea rows="2" cols="2" ng-model="formData.supplierAddress"></textarea>
+			</div>
+		  </div>
+
+	</fieldset>
+	</form>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+   </div>
+
+</script> 
+ 	 
   </div>
 
