--- a/app/views/system/codes.html
+++ b/app/views/system/codes.html
@@ -9,6 +9,7 @@
     </div>
 </div>
 <div class="row-fluid" ng-show="PermissionService.showMenu('READ_CODE')">
+	<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
     <table class="table">
         <thead>
         <tr class="graybg">
@@ -18,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-            <tr class="pointer-main" data-ng-repeat="code in codes.currentPageItems">
+            <tr class="pointer-main" data-ng-repeat="code in codes| filter:filterText">
                 <td class="pointer" data-ng-click="routeTo(code.id)">{{code.name}}</td>
                 <td class="pointer" data-ng-click="routeTo(code.id)">{{code.systemDefined}}</td>
                 <td class="pointer" data-ng-click="routeTo(code.id)">{{code.description}}</td>
@@ -26,10 +27,15 @@
 
         </tbody>
     </table>
-    <ul class="pager">
+    
+    <!-- 
+    		commented line is used for pagination
+    		If you need uncomment it
+   	 -->
+   <!--  <ul class="pager">
         			<li class="previous"><a ng-click="codes.previous()" href="" ng-disabled="!codes.hasPrevious()">&larr; Prev</a></li>
         			<li class="next" ><a ng-click="codes.next()" href="" ng-disabled="!codes.hasNext()">Next &rarr;</a></li>
-	</ul>
+	</ul> -->
 </div>
 </div>
 
