selfcare client fields added like nationalId telephone number authpin

--- a/myaccount/selfcare_module/views/clients/activateuser.html
+++ b/myaccount/selfcare_module/views/clients/activateuser.html
@@ -73,15 +73,9 @@
 	       			</td>
 	       			<td>
             			<div class="control-group">
-            				<label class="control-label">{{'label.mobilenumber' | translate}}&nbsp;<span class="required">*</span></label>
+            				<label class="control-label">{{'label.email' | translate}}&nbsp;<span class="required">*</span></label>
             				<div class="controls">
-            					<input name="phone" type="text" data-ng-model="formData.mobileNo" placeholder= "{{'label.mobilenumber' | translate}}" ng-minlength="7" ng-maxlength="15"
-            							ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/" required  late-Validate/><br/>
-            					 <span ng-show="regSuccessForm.phone.$dirty && regSuccessForm.phone.$invalid">
-				        			<small class="error" ng-show="regSuccessForm.phone.$error.pattern">{{'form.error.number'|translate}}</small>
-				        			<small class="error" ng-show="regSuccessForm.phone.$error.minlength">{{'form.error.number.digits.atleast'|translate}}</small>
-				        			<small class="error" ng-show="regSuccessForm.phone.$error.maxlength">{{'form.error.number.digits.atleast'|translate}}</small>
-				    			</span>
+            					<input name="email" type="text" data-ng-model="existedEmail" placeholder= "{{'label.email' | translate}}" ng-disabled="true" required late-Validate><br/>
             				</div>
         				 </div>
 	         				 
@@ -90,31 +84,81 @@
 	       		<tr>
 	       			<td>
             			<div class="control-group">
-                            <label class="control-label" for="address">{{ 'label.address' | translate }}&nbsp;<span class="required">*</span></label>
+            				<label class="control-label">{{'label.telephone.number' | translate}}&nbsp;<span class="required">*</span></label>
+            				<div class="controls">
+            					<input name="telePhone" type="text" data-ng-model="formData.homePhoneNumber" placeholder= "{{'label.telephone.number' | translate}}" ng-minlength="7" ng-maxlength="15"
+            							ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/" required  late-Validate/><br/>
+            					 <span ng-show="regSuccessForm.telePhone.$dirty && regSuccessForm.telePhone.$invalid">
+				        			<small class="error" ng-show="regSuccessForm.telePhone.$error.pattern">{{'form.error.number'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.telePhone.$error.minlength">{{'form.error.number.digits.atleast'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.telePhone.$error.maxlength">{{'form.error.number.digits.atleast'|translate}}</small>
+				    			</span>
+            				</div>
+        				 </div>
+	         				 
+	       			</td>
+	       			<td>
+            			<div class="control-group">
+            				<label class="control-label">{{'label.mobilephone' | translate}}&nbsp;<span class="required">*</span></label>
+            				<div class="controls">
+            					<input name="phone" type="text" data-ng-model="formData.mobileNo" placeholder= "{{'label.mobilephone' | translate}}" ng-minlength="7" ng-maxlength="15"
+            							ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/" required  late-Validate/><br/>
+            					 <span ng-show="regSuccessForm.phone.$dirty && regSuccessForm.phone.$invalid">
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.pattern">{{'form.error.number'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.minlength">{{'form.error.number.digits.atleast'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.maxlength">{{'form.error.number.digits.atleast'|translate}}</small>
+				    			</span>
+            				</div>
+        				 </div>
+	       			</td>
+	       		</tr>
+	       		<tr>
+	       			<td>
+            			<div class="control-group">
+                            <label class="control-label">{{ 'label.nationalid' | translate }}&nbsp;<span class="required">*</span></label>
                              <div class="controls">
-    	                        <input type="text" ng-model="formData.address" name="address" placeholder= "{{ 'placeholder.enter.address' | translate }}" required late-Validate/>
+    	                        <!-- <input type="text" datepicker-pop="ddMMyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" 
+                          			   date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;width:60px;"  readonly/>
+    	                        <strong>-</strong> -->
+    	                        <input type="text" ng-model="formData.nationalId" name="nationalId" placeholder= "{{ 'placeholder.enter.nationalid' | translate }}" maxlength="11"
+    	                        ng-pattern="/(^(((0[1-9]|[12][0-8])(0[1-9]|1[012]))|((29|30|31)(0[13578]|1[02]))|((29|30)(0[4,6,9]|11)))\d\d-\d\d\d\d$)|(^2902(00|04|08|12|16|20|24|28|32|36|40|44|48|52|56|60|64|68|72|76|80|84|88|92|96)-\d\d\d\d$)/" required late-Validate/><br/>
+    	                        <span ng-show="regSuccessForm.nationalId.$dirty && regSuccessForm.nationalId.$invalid">
+				        			<small class="error" ng-show="regSuccessForm.nationalId.$error.pattern">{{'form.error.number'|translate}}</small>
+				    			</span>
                              </div>
                         </div>	
 	         				 
 	       			</td>
 	       			<td>
             			<div class="control-group">
-             				 <label class="control-label" for="city">{{'label.city' | translate}}&nbsp;<span class="required">*</span></label>
-				              <div class="controls">
-				              <select ng-model="formData.city"  ng-options="city as city for city in cities" 
-				              		   ng-change="getStateAndCountry(formData.city)" required>
-				              		   <option value="">--{{'label.select'|translate}},--</option>
-				              </select>
-				              </div>
-           				 </div>
+                            <label class="control-label" for="address">{{ 'label.home.address' | translate }}&nbsp;<span class="required">*</span></label>
+                             <div class="controls">
+    	                        <input type="text" ng-model="formData.address" name="address" placeholder= "{{ 'placeholder.enter.address' | translate }}" required late-Validate/>
+                             </div>
+                        </div>	
+	         				 
 	       			</td>
 	       		</tr>
 	       		<tr>
 	       			<td>
             			<div class="control-group">
-                            <label class="control-label" for="zipcode">{{ 'label.zipcode' | translate }}&nbsp;<span class="required">*</span></label>
+             				 <label class="control-label" for="city">{{'label.city' | translate}}&nbsp;<span class="required">*</span></label>
+				              <div class="controls">
+				              <select ng-model="formData.city"  ng-options="city as city for city in cities" 
+				              		   ng-change="getStateAndCountry(formData.city)" required>
+				              		   <option value="">--{{'label.select'|translate}}--</option>
+				              </select>
+				              </div>
+           				 </div>
+	       			</td>
+	       			<td>
+            			<div class="control-group">
+                            <label class="control-label" for="zipcode">{{ 'label.home.postcode' | translate }}&nbsp;<span class="required">*</span></label>
                              <div class="controls">
-    	                        <input type="text" ng-model="formData.zipcode" name="zipcode" placeholder= "{{ 'placeholder.enter.zipcode' | translate }}" required late-Validate/>
+    	                        <input type="text" ng-model="formData.zipcode" name="zipcode" placeholder= "{{ 'placeholder.enter.postcode' | translate }}" ng-pattern="/^[0-9]+$/" maxlength="3" required late-Validate/><br/>
+    	                        <span ng-show="regSuccessForm.zipcode.$dirty && regSuccessForm.zipcode.$invalid">
+				        			<small class="error" ng-show="regSuccessForm.zipcode.$error.pattern">{{'form.error.number'|translate}}</small>
+				    			</span>
                              </div>
                         </div>	
 	         				 
