--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -273,7 +273,7 @@
                 </div>
           </div>
       </tab>
-      <tab heading="Add Info" select="getClientIdentityDocuments()" active="identitiesTab" 
+      <tab heading="More Info" select="getClientIdentityDocuments()" active="identitiesTab" 
       			ng-show="$parent.PermissionService.showMenu('read_CLIENTIDENTIFIER')">
      
      <div class="pull-right "> 
@@ -292,8 +292,166 @@
     	<a  href="#/addbillmodes/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Apply BillModes</a>
        	
        </div>
-        <br>
-        <div class="pull-left">
+       <div>
+	       <div class="pull-left">
+	          <span class="input-append grpinputicons">
+	                <input type="text" ng-model="parentClient" name="parentClient"  placeholder="Search by Parent #" 
+	                       typeahead="parentClient.displayLabel as parentClient.displayLabel for parentClient  in getparent($viewValue) | limitTo:8" 
+	                       typeahead-min-length="0"/>
+	                <button class="btn btn-primary btn-disabled" type="submit" disabled ng-click="saveParent(parentClient)">save</button>
+	        </span>
+	        </div><br/><br/><br/>
+	        <table class="table" ng-show=parent.id>
+	            <thead>
+	              <tr class="graybg">
+	                <th>ParentID</th>
+	                <th>ParentName</th>
+	                <th>AccountNo</th>
+	              </tr>
+	            </thead>
+	            <tbody>
+	             <tr class="pointer-main">
+	                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.id}}</td>
+	                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.displayName}}</td>
+	                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.accountNo}}</td>
+	            </tr>
+	            </tbody>
+	        </table>
+	       </div>
+        <br/>
+        <div class="tabbable" >
+  				<ul class="nav nav-tabs">
+				    <li class={{indentitiesSubTab}}><a ng-click="indentitiesTabFun()" data-toggle="tab" >Indentities</a></li>
+				    <li class={{documnetsUploadsTab}}><a ng-click="documnetsUploadsTabFun()" data-toggle="tab">Documnets Uploads</a></li>
+    			 	<li class={{creditCardDetailsTab}}><a ng-click="creditCardDetailsTabFun()" data-toggle="tab">CreditCard Details</a></li>
+    			 	<li class={{ACHDetailsTab}}><a ng-click="ACHDetailsTabFun()" data-toggle="tab">ACH Details</a></li>
+			    </ul>
+			 <div class="tab-content">
+  
+			    <div id="pane1" class="tab-pane" ng-class="{active: indentitiesSubTab}">
+					
+				    <div class="pull-right">
+	         			 <a ng-show="PermissionService.showMenu('CREATE_CLIENTIDENTIFIER')" href="#/addclientidentifier/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'tab.identities' | translate}}
+			 			 </a>
+	        		</div><br/>
+			        <table class="table" ng-show="(identitydocuments.length > 0)">
+			            <thead>
+			              <tr class="graybg">
+			                <th>{{'table.heading.uniqueidentification' | translate}}</th>
+			                <th>{{'table.heading.description' | translate}}</th>
+			                <th>{{'table.heading.type' | translate}}</th>
+			                <th>{{'table.heading.identitydocuments' | translate}}</th>
+			                <th>{{'table.heading.actions' | translate}}</th>
+			              </tr>
+			            </thead>
+			            <tbody>
+			              <tr ng-repeat="document in identitydocuments">
+			                <td>{{document.documentKey}}</td>
+			                <td>{{document.description}}</td>
+			                <td>{{document.documentType.name}}</td>
+			                <td>
+			                  <span ng-repeat="file in document.documents">
+			                    <a ng-click="downloadClientIdentifierDocument(document.id, file.id)">{{file.fileName}}</a>&nbsp;&nbsp;
+			                  </span>
+			                </td>
+			                <td>
+			                  <a href="#/addclientidentifierdocument/{{client.id}}/{{document.id}}"><i class="icon-cloud-upload"></i></a>&nbsp;
+			                  <a ng-show="PermissionService.showMenu('DELETE_CLIENTIDENTIFIER')" ng-click="deleteClientIdentifierDocument(client.id,document.id,$index)"><i class="icon-remove"></i></a>
+			                </td>
+			              </tr>
+			            </tbody>
+			          </table>
+			  	</div>
+			    <div id="pane2" class="tab-pane" ng-class="{active: documnetsUploadsTab}">
+			    
+			    	 <div class="pull-right">
+          				<a ng-show=" PermissionService.showMenu('CREATE_DOCUMENT')" href="#/addclientdocument/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Documents Uploads
+						</a>
+       	  			 </div> <br/>
+			       	 <table class="table" ng-show="(clientdocuments.length > 0)&&PermissionService.showMenu('READ_DOCUMENT')">
+			            <thead>
+			              <tr class="graybg">
+			                <th>{{'table.heading.name' | translate}}</th>
+			                <th>{{'table.heading.description' | translate}}</th>
+			                <th>{{'table.heading.filename' | translate}}</th>
+			                <th>{{'table.heading.actions' | translate}}</th>
+			              </tr>
+			            </thead>
+			            <tbody>
+			              <tr ng-repeat="clientdocument in clientdocuments">
+			                <td>{{clientdocument.name}}</td>
+			                <td>{{clientdocument.description}}</td>
+			                <td>{{clientdocument.fileName}}</td>
+			                <td>
+			                  <a ng-click="downloadDocument(clientdocument.id)"><i class="icon-cloud-download"></i></a>&nbsp;
+			                  <a ng-show="PermissionService.showMenu('DELETE_DOCUMENT')" ng-click="deleteDocument(clientdocument.id,$index)"><i class="icon-remove"></i></a>
+			                </td>
+			              </tr>
+			            </tbody>
+			          </table>
+			    </div>
+		     	<div id="pane3" class="tab-pane" ng-class="{active: creditCardDetailsTab}">
+		    
+			          <div class="pull-right">
+			         	 <a href="#/addcreditcarddetails/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>CreditCard Details</a>
+			          </div>
+        			   <br>
+			          <table class="table" ng-show="clientcarddetails.length > 0">
+			            <thead>
+			              <tr class="graybg">
+			                <th>{{'table.heading.id' | translate}}</th>
+			                <th>{{'table.heading.name' | translate}}</th>
+			                <th>{{'table.heading.cardNumber' | translate}}</th>
+			                <th>{{'table.heading.cardType' | translate}}</th>
+			                <th>{{'table.heading.cardExpiryDate' | translate}}</th>
+			                
+			              </tr>
+			            </thead>
+			            <tbody>
+			              <tr class="pointer-main" ng-repeat="clientcarddetails1 in clientcarddetails" ng-show="clientcarddetails1.type=='CreditCard'">
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails1.clientId,clientcarddetails1.id,clientcarddetails1.type)">{{clientcarddetails1.id}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails1.clientId,clientcarddetails1.id,clientcarddetails1.type)">{{clientcarddetails1.name}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails1.clientId,clientcarddetails1.id,clientcarddetails1.type)">{{clientcarddetails1.cardNumber}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails1.clientId,clientcarddetails1.id,clientcarddetails1.type)">{{clientcarddetails1.cardType}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails1.clientId,clientcarddetails1.id,clientcarddetails1.type)">{{clientcarddetails1.cardExpiryDate}}</td>
+			              </tr>
+			            </tbody>
+			          </table>
+		        </div>
+			    <div id="pane4" class="tab-pane" ng-class="{active: ACHDetailsTab}">
+			    
+			        <div class="pull-right">
+			          <a href="#/addachdetails/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>ACH Details</a>
+			        </div>
+			        <br>
+			        <table class="table" ng-show="clientcarddetails.length > 0">
+			            <thead>
+			              <tr class="graybg">
+			                <th>{{'table.heading.id' | translate}}</th>
+			                <th>{{'table.heading.name' | translate}}</th>
+			                <th>{{'table.heading.routingNumber' | translate}}</th>
+			                <th>{{'table.heading.bankAccountNumber' | translate}}</th>
+			                <th>{{'table.heading.bankName' | translate}}</th>
+			                <th>{{'table.heading.accountType' | translate}}</th>
+			              </tr>
+			            </thead>
+			            <tbody>
+			              <tr class="pointer-main" ng-repeat="clientcarddetails2 in clientcarddetails" ng-show="clientcarddetails2.type=='ACH'">
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.id}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.name}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.routingNumber}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.bankAccountNumber}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.bankName}}</td>
+			                <td class="pointer" data-ng-click="routeToCardDetails(clientcarddetails2.clientId,clientcarddetails2.id,clientcarddetails2.type)">{{clientcarddetails2.accountType}}</td>               
+			              </tr>
+			            </tbody>
+			          </table>
+			    </div>
+			    
+			    
+			  </div>
+			</div>
+        <!-- <div class="pull-left">
           <a ng-show="PermissionService.showMenu('CREATE_CLIENTIDENTIFIER')" href="#/addclientidentifier/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'tab.identities' | translate}}
 		  </a>
         </div><br/>
@@ -404,31 +562,9 @@
               </tr>
             </tbody>
           </table>
-          </div><br/>
-          <div class="pull-left">
-          <span class="input-append grpinputicons">
-                <input type="text" ng-model="parentClient" name="parentClient"  placeholder="Search by Parent #" 
-                       typeahead="parentClient.displayLabel as parentClient.displayLabel for parentClient  in getparent($viewValue) | limitTo:8" 
-                       typeahead-min-length="0"/>
-                <button class="btn btn-primary btn-disabled" type="submit" disabled ng-click="saveParent(parentClient)">save</button>
-        </span>
-        </div>
-          <table class="table" ng-show=parent.id>
-            <thead>
-              <tr class="graybg">
-                <th>ParentID</th>
-                <th>ParentName</th>
-                <th>AccountNo</th>
-              </tr>
-            </thead>
-            <tbody>
-             <tr class="pointer-main">
-                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.id}}</td>
-                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.displayName}}</td>
-                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.accountNo}}</td>
-            </tr>
-            </tbody>
-            </table>
+          </div><br/> -->
+          
+          
          </tab>
     <!--   <tab heading="{{'tab.templates' | translate}}" select="getClientTemplateDocuments()">
         <div class="span"></div>
@@ -809,6 +945,7 @@
 				    <li class={{paymentsC}}><a ng-click="paymentsTab()" data-toggle="tab">Payments</a></li>
     			 	<li class={{invoicesC}}><a ng-click="invoicesTab()" data-toggle="tab">Invoices</a></li>
     			 	<li class={{adjustmentsC}}><a ng-click="adjustmentsTab()" data-toggle="tab">Adjustments</a></li>
+			     <!-- <button id="download" class="btn btn-min btn-default pull-right" ng-click="exportFinancialCSV()" style = "margin-bottom : 10px;">{{'button.exportfinancialcsv' | translate}}</button> -->
 			    </ul>
 			<div class="tab-content">
   
@@ -1524,4 +1661,40 @@
                         <button id="submit" class="btn btn-primary" ng-click="accept(formData.cancelRemark)" ng-disabled="flagcancelpayment">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
+      <script type="text/ng-template" id="downloadCSVFinancialData.html">
+
+		<form class="form-horizontal well">
+	 		<div class="error" ng-show="errorStatus || errorDetails">
+				<label>{{'label.contract.error' | translate}}</label>
+				<label ng-show="errorStatus">{{errorStatus}}</label>
+				<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	   		 </div>
+		   <fieldset>
+				<legend>{{'label.downloadfinancialsummaryCSV' | translate}}</legend>
+				 <table width="100%">
+					 <tr>
+						<td width="50%">
+							<div class="control-group">
+		       					<label class="control-label">{{ 'label.fromdate' | translate }}</label>
+		       					<div class="controls">
+		             				<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
+		                    	</div>
+							</div>
+							<div class="control-group">
+		       					<label class="control-label">{{ 'label.todate' | translate }}</label>
+		       					<div class="controls">
+		             				<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="to.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
+		                    	</div>
+							</div> 
+						</td>
+					</tr>
+					</table>
+			</fieldset>
+		</form>
+	   <div class="modal-footer">
+	         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+	         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+	   </div>
+
+	</script> 
 </div>
