--- a/myaccount/selfcare_module/selfcare_styles/app.css
+++ b/myaccount/selfcare_module/selfcare_styles/app.css
@@ -409,10 +409,11 @@ tr.pointer-main:hover {
     color:red;
     margin-bottom:10px;
     margin-top:-10px;
-    padding: 10px;
+    font-weight : 600;
+    /* padding: 10px; */
     z-index: 100;
     left: 160px;
-    border:1px solid #ddd;
+    /* border:1px solid #ddd; */
     opacity: 0.9;
     
 }
